[metadata]
name = odookit
version = 0.0.1
author = Nick Booker
author_email = NMBooker@gmail.com
description = Odoo client-side command line tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmbooker/python-odookit
project_urls =
    Bug Tracker = https://github.com/nmbooker/python-odookit/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    click ~=7.1
    odoorpc ~=0.7
packages = find:
python_requires = >=3.6
scripts =
    bin/odookit-databases

[options.extras_require]
test =
    pytest ~=6.2
